--- a/functional_tests/repeat/index.html
+++ b/functional_tests/repeat/index.html
@@ -5,7 +5,7 @@
 <body>
   <div te-controller=demo>
     <h3>Simple repeat</h3>
-    <button te-click='s.items.push({name: "new"})'>Add</button>
+    <button te-click='s.addItem()'>Add</button>
     <ul>
       <li te-repeat='s.items'>
         <span te-bind='s.item.name'></span>
@@ -23,6 +23,9 @@
           { name: "squidly" },
           { name: "starfish" },
         ]
+        scope.addItem = function() {
+          scope.items.push({name: "new"})
+        }
       }
     })
     var rootAttach = Cute.compile(document.body,components)
