--- a/functional_tests/model/index.html
+++ b/functional_tests/model/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
   <meta charset='utf-8'>
+    <link rel=stylesheet href=../style.css>
+
 </head>
 <body>
   <div te-controller='eg'>
